loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:35: error: 'while' expected but 'else' found.
}else {
 ^Poucet1:40: error: '(' expected but '}' found.
	}
        ^